fix: test cards on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,10 @@ button,
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+
+  @media only screen and (max-width: 980px) {
+    display: none;
+  }
 }
 
 .flip-card-back_title {
@@ -392,7 +396,7 @@ button,
 
 @media only screen and (max-width: 980px) {
   .modal {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -400,7 +404,7 @@ button,
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+    background-color: rgba(0, 0, 0, 0.5);
   }
 
   .modal-content {
